# insight

./: .env.compose.example  .env.local.example  .env.remote.example  .env.virtuozzo.example  .gitignore  CONTRIBUTING.md  DEVLOG.md  NOTICE  README.md  dev-compose.sh  dev-restart.sh  dev-up.sh  docker-compose.yml
src/backend/: .dockerignore  Cargo.toml  clippy.toml  docker-entrypoint.sh
src/backend/libs/insight-clickhouse/: Cargo.toml
src/backend/libs/insight-clickhouse/src/: config.rs
src/backend/plugins/oidc-authn-plugin/: Cargo.toml  README.md
src/backend/plugins/oidc-authn-plugin/src/: module.rs
src/backend/plugins/oidc-authn-plugin/src/domain/: service.rs
src/backend/services/analytics-api/: Cargo.toml  Dockerfile
src/backend/services/analytics-api/helm/: Chart.yaml  values.yaml
src/backend/services/analytics-api/helm/templates/: deployment.yaml
src/backend/services/analytics-api/src/: auth.rs  main.rs
src/backend/services/analytics-api/src/api/: canonical_json.rs  catalog.rs  error.rs  handlers.rs  mod.rs
src/backend/services/analytics-api/src/domain/: mod.rs  query.rs
src/backend/services/analytics-api/src/migration/: live_tests.rs  m20260518_000001_collab_bullet_rewrite.rs  m20260519_000001_ai_bullet_rewrite.rs  m20260522_000001_metric_catalog.rs  m20260522_000002_metric_threshold.rs  m20260522_000003_threshold_lock_audit.rs  m20260527_000001_seed_metric_catalog.rs  m20260527_000002_seed_metric_views.rs  m20260529_000001_metric_query_catalog_link.rs  m20260601_000001_ai_claude_team_metrics.rs  m20260601_000002_seed_claude_team_metrics_catalog.rs  m20260603_000001_seed_crm_metric_catalog.rs  m20260603_000002_link_crm_query_catalog.rs  m20260604_000001_task_delivery_bullet_distribution.rs  m20260604_000002_collab_bullet_distribution.rs  m20260604_000003_ai_bullet_distribution.rs  m20260604_000004_code_quality_bullet_distribution.rs  m20260604_000005_git_bullet_distribution.rs  m20260604_000006_ic_kpis_peer_median.rs  m20260604_000007_drop_peer_cohort_stats_metric.rs  m20260604_000008_drop_ic_kpi_peer_median_metric.rs  m20260604_000009_member_metric_values.rs  m20260605_000001_member_prs_metric.rs  m20260606_000001_dept_metric_distributions.rs  m20260606_000002_dept_kpi_distribution.rs  m20260606_000003_team_bullet_blended_dept.rs  m20260609_000001_ai_chatgpt_team_metrics.rs  m20260609_000002_seed_chatgpt_team_metrics_catalog.rs  m20260610_000001_fix_ai_label_drift.rs  m20260611_000001_ai_bullet_dept_reconcile.rs  m20260612_000001_support_metrics.rs  m20260612_000001_team_git_bullet.rs  m20260612_000002_seed_support_catalog.rs  m20260612_000003_link_support_query_catalog.rs  (+8 more)
src/backend/services/api-gateway/: Cargo.toml  Dockerfile  README.md
src/backend/services/api-gateway/config/: insight.yaml  no-auth.yaml
src/backend/services/api-gateway/helm/: Chart.yaml  values.yaml
src/backend/services/api-gateway/secrets/: oidc.yaml.example
src/backend/services/api-gateway/specs/: DESIGN.md
src/backend/services/api-gateway/src/: auth_info.rs  main.rs  proxy.rs
src/backend/services/claude-team-proxy/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
src/backend/services/claude-team-proxy/helm/: values.yaml
src/backend/services/claude-team-proxy/src/: config.js  config.ts  index.js  index.ts  log.ts  server.js  server.ts
src/backend/services/identity/: .env.local.example  Directory.Build.props  Dockerfile
src/backend/services/identity/helm/: Chart.yaml  values.yaml
src/ingestion/connectors/crm/salesforce/: Dockerfile  README.md  descriptor.yaml  pyproject.toml
src/ingestion/connectors/git/gitlab/: .gitignore  Dockerfile  README.md  descriptor.yaml  pyproject.toml
src/ingestion/tests/e2e/: .gitignore  README.md  conftest.py  e2e.sh  pyproject.toml  pytest.ini
src/ingestion/tests/e2e/compose/: Dockerfile.runner  docker-compose.runner.yml
src/ingestion/tests/e2e/e2e_lib/: __init__.py  analytics_api.py  ch_seeder.py  config.py  dbt_runner.py  enrich.py  expect_engine.py  fixture_loader.py  metric_seed.py  migration_applier.py  ref_resolver.py  schema_validator.py
src/ingestion/tests/e2e/fixtures/: test_fixtures.py
src/ingestion/tests/e2e/meta/: test_ci_workflow.py  test_dbt_runner.py  test_expect_engine.py  test_ref_resolver.py  test_session_smoke.py
src/ingestion/tests/e2e/metrics/: ai_active_ai_members.test.yaml  ai_ai_loc_share2.test.yaml  ai_cc_overage.test.yaml  ai_chatgpt.test.yaml  ai_chatgpt_active.test.yaml  ai_claude_web.test.yaml  ai_codex_active.test.yaml  ai_codex_lines.test.yaml  ai_codex_sessions.test.yaml  ai_cursor_acceptance.test.yaml  ai_cursor_active.test.yaml  ai_cursor_agents.test.yaml  ai_cursor_completions.test.yaml  ai_cursor_lines.test.yaml  ai_prs_total.test.yaml  ai_prs_with_cc.test.yaml  ai_smoke.test.yaml  ai_team_ai_loc.test.yaml  crm_bullet_activity.test.yaml  crm_bullet_quality.test.yaml  crm_chart_flow.test.yaml  crm_kpis.test.yaml  crm_pipeline_now.test.yaml  wiki_confluence_active_authors.test.yaml  wiki_confluence_comments.test.yaml  wiki_confluence_edits.test.yaml  wiki_confluence_pages_created.test.yaml  wiki_outline_active_authors.test.yaml  wiki_outline_comments.test.yaml  wiki_outline_edits.test.yaml  wiki_outline_pages_created.test.yaml
src/ingestion/tests/e2e/seed/: metrics.yaml
src/ingestion/tests/e2e/specs/: collab_active_days.test.yaml  collab_emails_read.test.yaml  collab_emails_received.test.yaml  collab_emails_sent.test.yaml  collab_files_engaged.test.yaml  collab_files_shared_external.test.yaml  collab_files_shared_internal.test.yaml  collab_meeting_free.test.yaml  collab_meeting_hours.test.yaml  collab_meetings_count.test.yaml  collab_teams_chats.test.yaml  collab_teams_meeting_hours.test.yaml  collab_teams_meetings.test.yaml  collab_zulip_chat.test.yaml  task_delivery_bugs_to_task_ratio_jira.test.yaml  task_delivery_bugs_to_task_ratio_ratiosum_jira.test.yaml  task_delivery_due_date_compliance_jira.test.yaml  task_delivery_mean_time_to_resolution_median_jira.test.yaml  task_delivery_task_reopen_rate_gate_jira.test.yaml  test_fixtures.py
(+756 files in other folders)
