[workspace]
members = [
    "libs/insight-clickhouse",
    "plugins/oidc-authn-plugin",
    "services/api-gateway",
    "services/analytics-api",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Constructor Fabric"]
repository = "https://github.com/constructorfabric/insight"
rust-version = "1.95.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_mut = "warn"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"

[workspace.dependencies]
# ClickHouse client
clickhouse = { version = "0.14", features = ["uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
# `Stream` + `StreamExt::next` for driving SeaORM result cursors. Already
# pulled in transitively by sea-orm; declared at workspace scope so
# consumers (today: analytics-api schema-validator) can use it explicitly
# without leaning on a transitive dep.
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Web framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database (MariaDB via SeaORM)
sea-orm = { version = "1.1", features = ["runtime-tokio", "sqlx-mysql", "with-uuid", "with-chrono", "with-json", "macros"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio", "sqlx-mysql"] }

# IDs and time
uuid = { version = "1.19", features = ["serde", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Security
secrecy = { version = "0.10", features = ["serde"] }

# HTTP client (for Identity Resolution API)
reqwest = { version = "0.12", features = ["json"] }

# Caching
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# gears-rust toolkit (crates.io)
#
# Still published under the legacy `cf-modkit-*` / `cf-*` names. The
# gears-rust workspace renamed the local packages to `cf-gears-toolkit-*`
# but the renamed crates have not been pushed to crates.io yet; flip the
# `package = "..."` strings here when they appear.
modkit = { package = "cf-modkit", version = "=0.6.2" }
modkit-auth = { package = "cf-modkit-auth", version = "=0.6.1" }
modkit-http = { package = "cf-modkit-http", version = "=0.6.2" }
modkit-security = { package = "cf-modkit-security", version = "=0.6.2" }
modkit-macros = { package = "cf-modkit-macros", version = "=0.6.2" }
modkit-canonical-errors = { package = "cf-modkit-canonical-errors", version = "=0.7.3", features = ["axum", "sea-orm"] }

# gears-rust SDKs (crates.io)
authn-resolver-sdk = { package = "cf-authn-resolver-sdk", version = "0.3.8" }
authz-resolver-sdk = { package = "cf-authz-resolver-sdk", version = "0.2.17" }
types-registry-sdk = { package = "cf-types-registry-sdk", version = "0.1.5" }

# gears-rust system modules (crates.io)
api-gateway-module = { package = "cf-api-gateway", version = "0.1.22" }
authn-resolver = { package = "cf-authn-resolver", version = "0.2.8" }
authz-resolver = { package = "cf-authz-resolver", version = "0.1.15" }
tenant-resolver = { package = "cf-tenant-resolver", version = "0.1.16" }
static-authz-plugin = { package = "cf-static-authz-plugin", version = "0.1.15" }
single-tenant-tr-plugin = { package = "cf-single-tenant-tr-plugin", version = "0.1.17" }
grpc-hub = { package = "cf-grpc-hub", version = "0.1.18" }
module-orchestrator = { package = "cf-module-orchestrator", version = "0.1.18" }
types-registry = { package = "cf-types-registry", version = "0.1.17" }

# Config
figment = { version = "0.10", features = ["yaml", "env"] }

# Internal crates
insight-clickhouse = { path = "libs/insight-clickhouse" }

# CI rebuild marker — bumped to retrigger the api-gateway + analytics-api
# image builds on the constructorfabric/* namespace flip (2026-06-09 11:32).

