[package]
name = "insight-clickhouse"
version = "0.1.0"
description = "Shared ClickHouse client for Insight backend services"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
clickhouse = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
