[package]
name = "oidc-authn-plugin"
version = "0.1.0"
description = "OIDC/JWT authentication plugin for gears-rust authn-resolver"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# gears-rust
toolkit = { workspace = true }
toolkit-auth = { workspace = true }
toolkit-security = { workspace = true }
authn-resolver-sdk = { workspace = true }
types-registry-sdk = { workspace = true }

# Async
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Security
secrecy = { workspace = true }

# IDs
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
