[package]
name = "analytics-api"
version = "0.1.0"
description = "Analytics API — read-only query service over predefined ClickHouse metrics"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
insight-clickhouse = { workspace = true }
# Direct `clickhouse` dep is for the `Row` derive on `system.columns` probe
# rows (Refs #521 schema-validator). `insight-clickhouse` wraps the client
# but doesn't re-export the row-deserialization derives.
clickhouse = { workspace = true }

axum = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
toolkit-canonical-errors = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
figment = { workspace = true }

[dev-dependencies]
# `tower::ServiceExt::oneshot` for driving the Axum router in
# `api::tenant_resolution_tests` (Refs #522). Same dev-dep pattern as
# api-gateway's proxy tests.
tower = { version = "0.5", features = ["util"] }
