[package]
name = "insight-api-gateway"
version = "0.1.0"
description = "Insight API Gateway — entry point for all backend services"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "insight-api-gateway"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# gears-rust
toolkit = { workspace = true, features = ["bootstrap"] }

# System gears (linked via inventory for runtime discovery)
api_gateway = { workspace = true }
authn-resolver = { workspace = true }
authz-resolver = { workspace = true }
tenant-resolver = { workspace = true }
grpc_hub = { workspace = true }
gear_orchestrator = { workspace = true }
types_registry = { workspace = true }

# Plugins
static-authz-plugin = { workspace = true }
single-tenant-tr-plugin = { workspace = true }
oidc-authn-plugin = { path = "../../plugins/oidc-authn-plugin" }

# Auth info + proxy gears
toolkit-canonical-errors = { workspace = true }
async-trait = { workspace = true }
axum = "0.8"
reqwest = { workspace = true }
serde = { workspace = true }

# Runtime
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
